--- a/website/assets/css/main.css
+++ b/website/assets/css/main.css
@@ -1,3 +1,20 @@
 @import "tailwindcss";
 
 @custom-variant dark (&:where(.dark, .dark *));
+
+@theme {
+
+--color-blue-100: #e0e7ff;
+--color-blue-200: #c7d2fe;
+--color-blue-300: #a5b4fc;
+--color-blue-400: #818cf8;
+--color-blue-500: #3e63dd;
+--color-blue-600: #4f46e5;
+--color-blue-700: #4338ca;
+--color-blue-800: #3730a3;
+--color-blue-900: #312e81;
+
+--color-primary: var(--color-blue-500);
+--color-primary-dark: var(--color-blue-700)
+
+}
