--- a/website/assets/css/main.css
+++ b/website/assets/css/main.css
@@ -18,3 +18,61 @@
 --color-primary-dark: var(--color-blue-700)
 
 }
+
+@layer base {
+  html {
+    @apply bg-white dark:bg-gray-900;
+  }
+
+  body {
+    @apply text-gray-900 dark:text-gray-100;
+  }
+
+  a {
+    @apply text-blue-500 dark:text-blue-400;
+  }
+
+  :is(h1, h2, h3, h4, h5, h6) {
+    @apply text-gray-900 dark:text-gray-100;
+  }
+
+  .prose h1 {
+    @apply text-3xl;
+  }
+    .prose h2 {
+        @apply text-2xl;
+    }
+
+    .prose h3 {
+        @apply text-xl;
+    }
+    .prose h4 {
+        @apply text-lg;
+    }
+    .prose h5 {
+        @apply text-base;
+    }
+  .prose h6 {
+    @apply text-sm;
+  }
+  .prose p {
+    @apply text-gray-700 dark:text-gray-300 mb-4;
+  }
+  .prose a {
+    @apply text-blue-500 dark:text-blue-400 underline hover:no-underline transition-normal;
+  }
+  .prose ul {
+    @apply list-disc pl-5 mb-4;
+  }
+  .prose li {
+    @apply mb-2;
+  }
+  .prose :is(h1, h2, h3, h4, h5, h6) a {
+    @apply dark:text-white no-underline hover:underline text-gray-700 
+  }
+
+  .prose :is(h2, h3) {
+    @apply mt-8 mb-4;
+  }
+  
+}
