--- a/website/assets/css/main.css
+++ b/website/assets/css/main.css
@@ -29,11 +29,14 @@
   }
 
   a {
-    @apply text-blue-500 dark:text-blue-400;
+    @apply text-blue-500 dark:text-blue-400 cursor-pointer;
   }
 
   :is(h1, h2, h3, h4, h5, h6) {
     @apply text-gray-900 dark:text-gray-100;
+  }
+  .prose {
+    @apply text-xl;
   }
 
   .prose h1 {
@@ -73,6 +76,13 @@
 
   .prose :is(h2, h3) {
     @apply mt-8 mb-4;
+  }
+
+  .prose hr {
+    @apply border-gray-300 dark:border-gray-700 max-w-sm mx-auto my-12;
+  }
+  .prose blockquote {
+    @apply border-l-4 border-blue-500 pl-4 italic text-gray-700 dark:text-gray-300;
   }
   
 }
